@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+  v8r8p10
+  {
+    Modules = LHCbDIRAC:v8r8p10, LHCbWebDIRAC:v4r3p3
+    Depends = DIRAC:v6r17p24
+    LcgVer = 2017-05-23
+  }
+
   v8r8p9
   {
     Modules = LHCbDIRAC:v8r8p9, LHCbWebDIRAC:v4r3p3
