@@ -1,3 +1,9 @@
+[v8r8p10]
+use DIRAC v6r17p24
+
+Previous release had a wrong projectConfig.json
+
+
 [v8r8p9]
 use DIRAC v6r17p24
 
